package com.flightmatrix.enums;

public enum BookingStatus {
    RESERVED,
    CONFIRMED,
    CANCELLED
}
