package com.flightmatrix.enums;

public enum PaymentMethod {
    CREDIT_CARD,
    BANK_TRANSFER
}
