package com.flightmatrix.enums;

public enum PaymentStatus {
    PENDING,
    PAID,
    REFUNDED
}
