package com.flightmatrix.enums;

public enum SeatClass {
    ECONOMY,
    BUSINESS,
    FIRST_CLASS
}
