package com.flightmatrix.enums;

public enum UserRole {
    CUSTOMER,
    AGENT,
    ADMIN
}
